templated-kustomizations/bonfire/web/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bonfire--${environment_name}
spec:
  replicas: ${replicas:-1}
  template:
    spec:
      serviceAccount: bonfire--${environment_name}
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - name: web
        image: bonfirenetworks/bonfire:latest-open_science-amd64
        ports:
        - name: http
          containerPort: 4000
        resources:
          requests:
            cpu: 400m
            memory: 650Mi
        livenessProbe:
          httpGet:
            path: /dashboard
            port: http
        readinessProbe:
          httpGet:
            path: /dashboard
            port: http
