templated-kustomizations/bonfire/web/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bonfire--${environment_name}
spec:
  type: ClusterIP
  ports:
    - targetPort: http
      port: 4000
      protocol: TCP
