templated-kustomizations/bonfire/web/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bonfire--${environment_name}
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: ${hostname}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bonfire--${environment_name}
                port:
                  number: 4000
  tls:
    - hosts:
        - ${hostname}
      secretName: ${hostname}-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bonfire--${environment_name}-traefik
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: ${hostname}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bonfire--${environment_name}
                port:
                  number: 4000
  tls:
    - hosts:
        - ${hostname}
      secretName: ${hostname}-tls
